--- a/SortApp/templates/SortApp/sort.html
+++ b/SortApp/templates/SortApp/sort.html
@@ -38,3 +38,15 @@
 
 </body>
 </html>
+<script>
+// When the user scrolls down 50px from the top of the document, resize the header's font size
+window.onscroll = function() {scrollFunction()};
+
+function scrollFunction() {
+  if (document.body.scrollTop > 50 || document.documentElement.scrollTop > 50) {
+    document.getElementById("header").style.width = "39rem";
+  } else {
+    document.getElementById("header").style.fontSize = "20px";
+  }
+}
+</script>
