--- a/SortApp/templates/SortApp/getele.html
+++ b/SortApp/templates/SortApp/getele.html
@@ -11,6 +11,32 @@
 	<!-- JavaScript Bundle with Popper -->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
 			integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+<style>
+.square {
+  height: 90px;
+  width: 300px;
+  background-color: lightblue;
+
+}
+.text{
+  background-color: lightblue;
+margin-bottom: 5px;
+box-shadow: 0px 0px 1px 0px rgba(0,0,0,0.5);
+font-family: 'ProximaNova-Bold';
+border: 0;
+width: 100px;
+height:100px;
+text-align: center;
+text-transform: capitalize;
+padding:15px;
+padding-left:21px;
+text-transform:uppercase;
+
+}
+ input:focus, textarea:focus, select:focus{
+       
+    }
+</style>
 </head>
 <body>
 	<h1>Welcome To {{ req }} </h1>
@@ -19,14 +45,14 @@
 		{% csrf_token %}
 
 
-            <input onclick="myFunction()" id = 'asd'>
+            <input onclick="myFunction()" id = 'asd' class="text" placeholder="arr(0)">
 
 
 
 
 		<!-- <button type="submit" class="btn btn-primary btn-lg">Submit</button> -->
 		<h3>Enter Element you want to find:</h3>
-                <input type="number" name="textfield">
+             <br>   <input type="text" name="textfield" class="text" id="t"> 
             <button type="submit" name="sub" id= 'sub' class="btn btn-primary btn-lg">Submit</button>
             <input type="hidden"  >
 	</form>
@@ -36,19 +62,24 @@
 
     function myFunction() {
         const newinput = document.createElement('input');
+        num = 1;
         newinput.type = 'text';
         newinput.setAttribute('id', "asd");
+        newinput.setAttribute('class', "text");
+        newinput.setAttribute('placeholder', `arr ${val}`);
         newinput.setAttribute('onclick', 'myFunction()');
-
+        
         const old = document.getElementById("asd");
-      insertAfter(newinput,old)
-    val = val + 1;
+        insertAfter(newinput,old)
+        val = val + 1;
         old.setAttribute('id', val);
         old.setAttribute('name', val);
+        newinput.setAttribute('placeholder',`arr (${val})`);
         old.setAttribute('onclick', '');
         const sub = document.getElementById("sub");
       sub.setAttribute("value", val);
 }
+
 function insertAfter(newNode, currentNode) {
     currentNode.parentNode.insertBefore(newNode,currentNode.nextSibling);
     newNode
