--- a/SortApp/templates/SortApp/linear.html
+++ b/SortApp/templates/SortApp/linear.html
@@ -38,7 +38,7 @@ body {
   padding-right: 50px;
   padding-bottom: 50px;
   padding-left: 50px;
-  
+  background-color:lightblue;
   }
   #title{
     text-align: justify;
