--- a/SortApp/templates/SortApp/linear.html
+++ b/SortApp/templates/SortApp/linear.html
@@ -39,6 +39,7 @@ body {
   padding-bottom: 50px;
   padding-left: 50px;
   background-color:lightblue;
+  margin-bottom:10px;
   }
   #title{
     text-align: justify;
