--- a/SortApp/templates/SortApp/linear.html
+++ b/SortApp/templates/SortApp/linear.html
@@ -95,10 +95,14 @@ div.col-sm-9 div {
   margin-top: 15rem;
 }
 
-table,th,tr{
+table,th,tr,td{
   text-align:center;
+  border: 1px solid black;
+  
 }
-
+table{
+  width: 100%;
+}
 #bold{
   font-weight: bold;
 }
@@ -174,7 +178,7 @@ table,th,tr{
       <div class="contain">      
         <p>Consider the following example having 7 array elements.<br>
                 
-                <table class="table table-bordered">
+                <table>
                   <tr>
                     <th>0</th>
                     <th>1</th>
@@ -201,7 +205,7 @@ table,th,tr{
 
                 <br><a id="bold"> Pass 1:- </a> <br>
                 Compare Data[0] with 9<br>
-                <table class="table table-bordered">
+                <table >
                   <tr>
                     <th>0</th>
                     <th>1</th>
@@ -226,7 +230,7 @@ table,th,tr{
 
                 <br><a id="bold"> Pass 2:- </a><br>
                 Compare Data[1] with 9<br>
-                <table class="table table-bordered">
+                <table >
                   <tr>
                     <th>0</th>
                     <th>1</th>
@@ -252,7 +256,7 @@ table,th,tr{
 
                 <br><a id="bold"> Pass 3:- </a><br>
                 Compare Data[2] with 9<br>
-                <table class="table table-bordered">
+                <table >
                   <tr>
                     <th>0</th>
                     <th>1</th>
@@ -277,7 +281,7 @@ table,th,tr{
 
                <br><a id="bold"> Pass 4:- </a><br>
                 Compare Data[3] with 9<br>
-                <table class="table table-bordered">
+                <table >
                   <tr>
                     <th>0</th>
                     <th>1</th>
@@ -302,7 +306,7 @@ table,th,tr{
 
                <br><a id="bold"> Pass 5:- </a><br>
                 Compare Data[4] with 9<br>
-                <table class="table table-bordered">
+                <table >
                   <tr>
                     <th>0</th>
                     <th>1</th>
