--- a/SortApp/templates/SortApp/linear.html
+++ b/SortApp/templates/SortApp/linear.html
@@ -19,6 +19,7 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans:wght@300&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Averia+Libre:wght@300&family=Sora:wght@200&display=swap" rel="stylesheet">
 <style>
 body {
     position: relative;
@@ -118,12 +119,12 @@ table{
   <div class="row page__content-container">
     <div class="col-xs-3">
         <nav class="" id="myScrollspy">
-      <ul class="nav nav-pills nav-stacked">
-        <li class="active"><a href="#section1">Intro</a></li>
-        <li><a href="#section2">Algo</a></li>
-        <li><a href="#section3">Program</a></li>
-        <li><a href="#section4">Flowchart</a></li>
-        <li><a href="#section5">Example</a></li>
+      <ul class="nav nav-pills nav-stacked" style="font-family: 'Sora', sans-serif;font-size:20px;">
+        <li class="active"><a href="#section1">Introduction - </a></li>
+        <li><a href="#section2">Algorithm -</a></li>
+        <li><a href="#section3">Program -</a></li>
+        <li><a href="#section4">Flowchart -</a></li>
+        <li><a href="#section5">Example -</a></li>
         <!--<li class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown" href="#">Section 4 <span class="caret"></span></a>
           <ul class="dropdown-menu">
@@ -143,7 +144,7 @@ table{
         </div>
       </div>
       <div id="section2"> 
-        <p id="title">Algorithm</p>
+        <p id="title">Algorithm :</p>
         <div class="contain" > 
           <p> Linear Search Algorithm is as follows: <br>
             <b>Step 1</b>:  Set i to 1 <br>
@@ -158,7 +159,7 @@ table{
         </div>
       </div>        
       <div id="section3"> 
-      <p id="title">Implementation of Linear Search:</p> <br> 
+      <p id="title">Implementation of Linear Search :</p> <br> 
         <div class="contain" >    
           <p> <b>Step 1</b> - The list given is the list of elements in an unsorted array.  <br>
               <b>Step 2</b> - The element to be searched is called item, as mentioned in the image, so value item, is compared with all the elements of the array starting from 0th element. <br>
